# cdp_core

./: .gitignore  .pylintrc  .yamllint  Address_Matcher_MoJ.ipynb  KV-Ingestion-README.md  README.md  _bootstrap.py  address_matcher_MoJ.ipynb  azure-pipeline-dev.yml  azure-pipeline-prod.yml  azure-pipeline.yml  azure-pipelines-1.yml  azure-pipelines-test.yml  azure-pipelines.yml  create_address_test_data.ipynb  databricks.yml  kv-ingestion-pipeline.yml  pyproject.toml  requirements-pipeline.yml  requirements.txt  setup.py  unit_test.json
cdp_dab/: databricks.yml  pyproject.toml
cdp_dab/resources/: cdp_dab.job.yml  cdp_dab.pipeline.yml
cdp_dab/src/: dlt_pipeline.ipynb  helloworld.ipynb
cdp_dab/tests/: main_test.py
cicd_configs/: .bandit
cicd_configs/lint/: .yamllint
cicd_templates/: dev.yml  prod.yml  test.yml
cicd_templates/modules/: databricks_azure_cli.yml
cicd_templates/scripts/: bump-version.sh
docs/: spark_configure.md
install_package_on_vdi/: install_package.py  uninstall_all_packages.sh
permissions/: apply_permissions.py  grant_open_access.py  infer_permissions.sql  revoke_open_access.py
resources/: jb_lad_cd_nm.job.yml  jb_lad_cd_nm_script.job.yml  jb_lad_cd_nm_whl.job.yml  jb_permissions.job.yml  jb_pytest.job.yml  test.job.yml
security_reports/: requirements.txt
src/: notebook.ipynb  test_bandit_security_high.py  test_bandit_security_low.py  test_bandit_security_med.py
src/utils/: util.py
templates/: dev.yml  prod.yml  test.yml  variables.yml
tests/: _bootstrap.py  conftest.py  main.py  main_test.py  test_get_spark.py  utils.py
(+58 files in other folders)
